--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,119 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    background-color: red;
+    background-color: lightgray;
+    font-family: Helvetica, sans-serif, serif;
+}
+
+/*The actual timeline (the vertical ruler)*/
+.timeline {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+/*The vertical timeline (vertical ruler) changed the bar color*/
+.timeline::after {
+    content: '';
+    position: absolute;
+    width: 6px;
+    background-color: #005F93;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    margin-left: -3px;
+}
+
+/*container around the content*/
+.container {
+    padding: 10px 40px;
+    position: relative;
+    background: inherit;
+    width: 50%;
+}
+
+/*The circles in the timeline*/
+.container::after {
+    content: '';
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    right: -17px;
+    background: #005F93;
+    border: 4px solid #005F93;
+    top: 15px;
+    border-radius: 45%;
+    z-index: 1;
+}
+
+/*Place the container to the left*/
+.left {
+    left: 0;
+}
+
+/*Place the container to the right*/
+.right {
+    left: 50%;
+}
+
+/*add triangles to the left container (pointing right)*/
+.left::before {
+    content: '';
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    right: 30px;
+    border: medium solid white;
+    border-width: 10px 0 10px 10px;
+    border-color: transparent transparent transparent white;
+}
+
+/*add triangles to the right container (pointing left)*/
+.right::before {
+    content: '';
+    height: 0;
+    position: absolute;
+    top: 22px;
+    width: 0;
+    z-index: 1;
+    left: 30px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+    left: -16px;
+}
+
+/* The actual content */
+.content {
+    padding: 20px 30px;
+    background-color: white;
+    position: relative;
+    border-radius: 6px;
+}
+
+.timeline .date {
+    border: 2px solid #FF0042;
+    position: absolute;
+    background: #FF0042;
+    color: white;
+    padding: 5px;
+    border-radius: 5%;
+}
+
+button {
+    background: #005F93;
+    text-transform: uppercase;
+    color: white;
+    top: 0;
+    right: 0;
+    margin: 0;
+
 }
